[package]
name = "flint-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "The shared functionality for flint implementations"
keywords = ["flint", "steel", "minecraft", "test"]
categories = ["development-tools::testing", "development-tools", "development-tools::debugging"]
readme = "README.md"
repository = "https://github.com/FlintTestMC/flint-core"
homepage = "https://github.com/FlintTestMC/flint-core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.101"
rustc-hash = "2.1"
# rsjsonnet = "0.4.0" # for jsonnet support
colored = "3"

[dev-dependencies]
tempfile = "3"
serial_test = "3.2.0"